--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <div class="timeline-item">
                         <h4>Front Office Manager</h4>
                         <h5 class="text-primary">Hotel Buddha Residency</h5>
-                        <p class="text-muted"><i class="far fa-calendar me-2"></i>Dec 2024 - Current</p>
+                        <p class="text-muted"><i class="far fa-calendar me-2"></i>Dec 2024 - Feb 2025</p>
                         <p>Overseeing front desk operations, managing staff, and ensuring guest satisfaction in a hospitality setting.</p>
                     </div>
                     
