--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="display-4 fw-bold mb-3">Vishal Pandey</h1>
-                    <p class="lead mb-4">Designer | Developer | Legal Professional</p>
+                    <p class="lead mb-4">Designer | Developer | Marketer | Legal Professional </p>
                 </div>
             </div>
         </div>
